fix: dockerfile, docker-compose.yaml, main cors, auth-handler form data
